--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,5 @@
 :root {
+  --black: #323232;
 }
 html,
 body,
@@ -85,7 +86,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  font-family: "Roboto", sans-serif;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -123,4 +124,20 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+h1 {
+  font-size: 6rem;
+  font-family: "Inter", sans-serif;
+}
+h2 {
+  font-size: 4.5rem;
+  font-family: "Inter", sans-serif;
+}
+h3 {
+  font-size: 4rem;
+  font-family: "Inter", sans-serif;
+}
+
+p {
+  line-height: 140%;
 }
