--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,13 @@
 :root {
   --black: #323232;
+  --title-font: "Inter", sans-serif;
+  --body-font: "Roboto", sans-serif;
+  --color-artwork-1: #fff9f1;
+  --color-artwork-2: #ecf6fd;
+  --color-artwork-3: #0a0a0a;
+  --text-color-artwork-1: #da452f;
+  --text-color-artwork-2: #14366b;
+  --text-color-artwork-3: #f5f5f5;
 }
 html,
 body,
@@ -86,8 +94,9 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font-family: "Roboto", sans-serif;
+  font: inherit;
   vertical-align: baseline;
+  color: var(--black);
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -105,39 +114,49 @@ section {
 }
 body {
   line-height: 1;
+  overflow-x: hidden;
 }
 ol,
 ul {
   list-style: none;
 }
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 h1 {
   font-size: 6rem;
-  font-family: "Inter", sans-serif;
+  font-family: var(--title-font);
 }
 h2 {
   font-size: 4.5rem;
-  font-family: "Inter", sans-serif;
+  font-family: var(--title-font);
 }
 h3 {
   font-size: 4rem;
-  font-family: "Inter", sans-serif;
+  font-family: var(--title-font);
 }
 
 p {
   line-height: 140%;
+}
+
+.underline {
+  width: fit-content;
+  position: relative;
+  cursor: pointer;
+}
+.underline:hover::after {
+  width: 100%;
+}
+.underline::after {
+  transition: 0.5s ease-in-out;
+  content: "";
+  position: absolute;
+  display: block;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 4px;
+  background-color: var(--black);
 }
