--- a/src/global.css
+++ b/src/global.css
@@ -199,6 +199,7 @@ body {
   line-height: 1;
   overflow-x: hidden;
   transition: background 0.5s ease-in-out;
+  scroll-behavior: smooth;
 }
 ol,
 ul {
