--- a/src/global.css
+++ b/src/global.css
@@ -5,7 +5,7 @@
   --color-artwork-1: #fff9f1;
   --color-artwork-2: #ecf6fd;
   --color-artwork-3: #0a0a0a;
-  --text-color-artwork-1: #da452f;
+  --text-color-artwork-1: #276840;
   --text-color-artwork-2: #14366b;
   --text-color-artwork-3: #f5f5f5;
 }
