--- a/src/global.css
+++ b/src/global.css
@@ -139,8 +139,13 @@ section {
 }
 body {
   line-height: 1;
-  overflow-x: hidden;
   transition: background 0.5s ease-in-out;
+}
+section{
+  padding: 2rem 0;
+}
+html {
+  overflow-x: hidden;
 }
 ol,
 ul {
